Better project structure, config changeg to .env

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ INFO_CHAT_ID='chat id, use get my id bot or smth like that'
 
 API_KEY='your gpt api key'
 
-WHITE_LIST= [123,123] # list of chat.id users which can change passwords/excels
+WHITE_LIST= 123,123 # list of chat.id users which can change passwords/excels
 
 OCR_API='your open space ocr api key '
 
