.env updated, new name of excel file

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,13 @@ OCR_API='your open space ocr api key '
 
 SMTP_MAIL='gmail'
 SMTP_PASS='app password'
+
+
+# Utils for amo_crm read docs on https://www.amocrm.ru/developers/content/crm_platform/api-reference
+AMOCRM_SUBDOMAIN = ''
+AMOCRM_CLIENT_ID = ''
+AMOCRM_CLIENT_SECRET = ''
+AMOCRM_REDIRECT_URI = ''
+
+AMOCRM_ACCESS_TOKEN = ''
+AMOCRM_REFRESH_TOKEN = ''
