--- a/requirements.txt
+++ b/requirements.txt
@@ -25,11 +25,13 @@ boto3==1.34.15
 botocore==1.34.15
 bottle==0.12.25
 bottle-websocket==0.2.9
+breadability==0.1.20
 bs4==0.0.1
 cachetools==4.2.2
 catalogue==2.0.9
 certifi==2023.5.7
 cffi==1.15.1
+chardet==5.2.0
 charset-normalizer==3.1.0
 chromedriver-autoinstaller==0.4.0
 ci-info==0.3.0
@@ -51,6 +53,7 @@ dateutils==0.6.12
 decorator==5.1.1
 Deprecated==1.2.14
 distro==1.8.0
+docopt==0.6.2
 easygui==0.98.3
 Eel==0.16.0
 et-xmlfile==1.1.0
@@ -66,6 +69,7 @@ fonttools==4.43.1
 forex-python==1.8
 frozenlist==1.3.3
 future==0.18.3
+gensim==4.3.2
 gevent==22.10.2
 gevent-websocket==0.10.1
 google-api-core==2.11.0
@@ -137,6 +141,7 @@ parsel==1.8.1
 parso==0.8.3
 pathlib==1.0.1
 pathy==0.10.2
+patool==1.15.0
 pdfminer.six==20221105
 pefile==2023.2.7
 pickleshare==0.7.5
@@ -149,6 +154,7 @@ prov==2.0.0
 pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pycountry==23.12.11
 pycparser==2.21
 pydantic==1.10.8
 PyDispatcher==2.0.7
@@ -172,6 +178,7 @@ pyTelegramBotAPI==4.12.0
 pytesseract==0.3.10
 python-dateutil==2.8.2
 python-docx==0.8.11
+python-dotenv==1.0.1
 python-multipart==0.0.6
 python-telegram-bot==20.7
 pytz==2023.3
@@ -180,6 +187,7 @@ pywin32-ctypes==0.2.1
 pyxnat==1.6
 PyYAML==6.0
 queuelib==1.6.2
+rarfile==4.1
 ratelimit==2.2.1
 rdflib==7.0.0
 regex==2023.8.8
@@ -216,6 +224,7 @@ srsly==2.4.7
 sshtunnel==0.4.0
 stack-data==0.6.2
 starlette==0.25.0
+sumy==0.11.0
 tabula==1.0.5
 tabula-py==2.9.0
 tabulate==0.9.0
